<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/ic_main_bottom_navi_home"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />

    <item
        android:id="@+id/menu_main_btm_nav_my_search"
        android:icon="@drawable/ic_main_bottom_navi_search"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_search_title" />
    <item
        android:id="@+id/menu_main_btm_nav_favorite"
        android:icon="@drawable/ic_main_bottom_navi_favorite"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_favorite_title" />

    <item
        android:id="@+id/menu_main_btm_nav_order_list"
        android:icon="@drawable/ic_main_bottom_navi_order_list"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_order_list_title" />
    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:icon="@drawable/ic_main_bottom_navi_my_page"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_my_page_title" />

</menu>
