<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_address_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_tv_title"
        android:layout_marginTop="@dimen/view_margin_14"
        android:textColor="@color/black"
        android:textSize="@dimen/text_content_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_6"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:textSize="@dimen/text_content_12"
        android:background="@drawable/bg_location_road_address"
        android:text="@string/location_tv_road_address"
        android:textColor="@color/blueForText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address_detail" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_content_14"
        android:layout_marginStart="@dimen/view_margin_8"
        android:text="@string/location_tv_building_example"
        android:textColor="@color/grayForText"
        app:layout_constraintBottom_toBottomOf="@id/tv_type"
        app:layout_constraintStart_toEndOf="@id/tv_type"
        app:layout_constraintTop_toTopOf="@id/tv_type" />

    <View
        android:id="@+id/div_location"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/view_margin_12"
        android:background="@color/grayForDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address"/>

</androidx.constraintlayout.widget.ConstraintLayout>